--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8" />
   <title>Hello GUI</title>
   <meta name="description" content="GUI for a Holochain app" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.min.css" />
 </head>
 
 <body>
