--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Hello GUI</title>
   <meta name="description" content="GUI for a Holochain app" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.min.css" />
+  <script type="text/javascript" src="hc-web-client/hc-web-client-0.5.1.browser.min.js"></script>
 </head>
 
 <body>
