--- a/index.html
+++ b/index.html
@@ -14,24 +14,7 @@
   <div>Response: <span id="output"></span></div>
 
   <script type="text/javascript" src="hc-web-client/hc-web-client-0.5.1.browser.min.js"></script>
-  <script type="text/javascript">
-    var holochain_connection = holochainclient.connect({
-      url: 'ws://localhost:3401',
-    })
-
-    function hello() {
-      holochain_connection.then(({ callZome, close }) => {
-        callZome('test-instance', 'hello', 'hello_holo')({ args: {} })
-          .then((result) => showOutput(result))
-      })
-    }
-
-    function showOutput(text) {
-      let span = document.getElementById('output')
-      let parsedText = JSON.parse(text)
-      span.textContent = parsedText.Ok;
-    }
-  </script>
+  <script type="text/javascript" src="hello.js"></script>
 </body>
 
 </html>
