--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 <body>
   <button onclick="hello()">Say Hello</button>
   <div>Response: <span id="output"></span></div>
+  <h3>Create a person</h3>
+  <input type="text" id="name" placeholder="Enter your name :)">
+  <button onclick="createPerson()" type="button">Submit Name</button>
+  <div>Adress: <span id="address_output"></span></div>
+  <h3>Retrieve Person</h3>
+  <input type="text" id="address_in" placeholder="Enter the entry address">
+  <button onClick="retrievePerson()" type="button">Get Person</button>
+  <div>Person: <span id="person_output"></span></div>
 
   <script type="text/javascript" src="hc-web-client/hc-web-client-0.5.1.browser.min.js"></script>
   <script type="text/javascript" src="hello.js"></script>
