add field to change port

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <button onClick="retrievePerson()" type="button">Get Person</button>
   <div>Person: <span id="person_output"></span></div>
 
+  <input type="text" id="port" placeholder="Set websocket port" />
+  <button onclick="update_port()" type="button">update port</button>
   <script type="text/javascript" src="hc-web-client/hc-web-client-0.5.1.browser.min.js"></script>
   <script type="text/javascript" src="hello.js"></script>
 </body>
